--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,24 @@ btn:hover {
 label {
   font-size: 20px;
 }
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   form {
     width: 100%;
-    margin-right: 26px;
+    margin-right: 18px;
   }
 }
+
+@media screen and (min-width: 600px) {
+  form {
+    width: 75%;
+  }
+}
+@media screen and (min-width: 992px) {
+  form {
+    width: 50%;
+    }
+  }
+  @media screen and (max-width:420px) {
+  form {
+    width: 35%;
+  }
