--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,15 @@ label {
 @media screen and (min-width: 992px) {
   form {
     width: 50%;
-    }
   }
-  @media screen and (max-width:400px) {
+}
+@media screen and (max-width: 400px) {
   form {
     width: 35%;
   }
+}
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  form {
+    width: 35%;
+  }
+}
