--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,8 @@ label {
     width: 35%;
   }
 }
+@media only screen and (min-width: 360px) and (max-width: 767px) { 
+  form {
+  width: 20%
+}
+}
