--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ label {
 
 @media screen and (min-width: 600px) {
   form {
-    width: 75%;
+    width: 50%;
   }
 }
 @media screen and (min-width: 992px) {
@@ -89,13 +89,9 @@ label {
     width: 35%;
   }
 }
-@media only screen and (min-width: 320px) and (max-width: 720px) {
+@media only screen and (min-width: 360px) and (max-width: 740px) {
   form {
-    width: 35%;
+    width: 20%;
+    background-color: red;
   }
-}
-@media only screen and (min-width: 360px) and (max-width: 767px) { 
-  form {
-  width: 20%
-}
 }
